test/fixtures/configs/projects/patch/feature/fail/error.js
module.exports = {
  url: '/users/1/projects/1/feature',
  method: 'patch',
  headers: {
    authorization: 'token moderatorToken'
  }
};
